--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -232,9 +232,10 @@
     <string name="app_lock_timeout_summary">Duration of time after which an unlocked app in background should be locked</string>
     <string name="app_lock_notifications_title">Redact notifications</string>
     <string name="app_lock_notifications_summary">
-          Notification content will be hidden and collapsed for selected apps when they are locked.
+          Notification content will be hidden and collapsed when app is locked out.
+          Existing notifications as well as new notifications will be redacted.
           Heads up notifications will be automatically disabled.
-     </string>
+    </string>
     <string name="app_lock_notifications_disabled_summary">Protect an application first</string>
     <string name="app_lock_biometrics_allowed_title">Enable biometrics for unlocking</string>
     <string name="app_lock_footer_text">Bubbles will be automatically dismissed after timeout</string>
