--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -48,7 +48,7 @@
     <string name="edge_light_custom_color_title">Cor personalizada</string>
     <!-- Miscellaneous settings -->
     <string name="miscellaneous_settings_title">Configurações diversas</string>
-    <string name="miscellaneous_settings_summary">Som de captura de tela, controle de música da tecla de volume, aplicativos ocultos do launcher</string>
+    <string name="miscellaneous_settings_summary">Som de captura de tela, controle de música da tecla de volume</string>
     <!-- Screenshot sound -->
     <string name="screenshot_shutter_sound_title">Som de captura</string>
     <string name="screenshot_shutter_sound_summary">Ativar som e vibração de captura de tela</string>
