--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -56,7 +56,7 @@
 
     <!-- Miscellaneous settings -->
     <string name="miscellaneous_settings_title">杂项</string>
-    <string name="miscellaneous_settings_summary">截屏音、音乐控制、隐藏应用</string>
+    <string name="miscellaneous_settings_summary">截屏音、音乐控制</string>
 
     <!-- Screenshot sound -->
     <string name="screenshot_shutter_sound_title">截屏提示音</string>
