--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -244,6 +244,9 @@
     <string name="three_finger_gesture_title">Swipe to screenshot</string>
     <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
 
+    <!-- Nav bar inversion -->
+    <string name="nav_bar_inverse_title">Swap left and right buttons</string>
+
     <!-- Status bar Icon Manager -->
     <string name="icon_manager_title">Icon manager</string>
     <string name="icon_manager_summary">Control visibility of status bar icons</string>
