--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -131,6 +131,11 @@
     <string name="use_old_mobiletype_title">Small mobile type icon</string>
     <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
 
+    <!-- Statusbar Privacy -->
+    <string name="privacy">Privacy</string>
+    <string name="camera_mic_icons_title">Enable camera and microphone privacy indicators</string>
+    <string name="location_indicators_title">Enable location privacy indicator</string>
+
     <!-- Theme settings -->
     <string name="theme_settings_title">Theme settings</string>
     <string name="theme_settings_summary">Monet engine, Icon pack, Fonts</string>
