--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -138,21 +138,7 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">Тема</string>
-    <string name="theme_settings_summary">Monet, Набор иконок, Шрифты</string>
-
-    <!-- Monet engine -->
-    <string name="monet_engine_settings_title">Движок Monet</string>
-    <string name="monet_engine_settings_summary">Пользовательский цвет, насыщенность, яркость</string>
-    <string name="accurate_shades_title">Использовать точные оттенки</string>
-    <string name="color_override_title">Пользовательская палитра цветов</string>
-    <string name="color_override_default_summary">Использовать цвет обоев</string>
-    <string name="custom_color_override_summary_placeholder">
-        Выбранный цвет: <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>. Задайте пустое значение для использования цвета обоев.
-    </string>
-    <string name="invalid_color_input">Неверный ввод цвета!</string>
-    <string name="chroma_factor_title">Насыщенность</string>
-    <string name="linear_lightness_title">Использовать пользовательскую шкалу яркости</string>
-    <string name="white_luminance_title">Яркость</string>
+    <string name="theme_settings_summary">Набор иконок, Шрифты</string>
 
     <!-- Icon pack -->
     <string name="icon_pack_preference_title">Набор иконок</string>
