FlamingoSettings: Allow toggling screen off udfps [2/2]
Co-authored-by: Demon000 <demonsingur@gmail.com>
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -393,4 +393,8 @@
     <string name="allow_access_to_obb_directory_title">Allow access to Android/obb folder</string>
     <string name="allow_access_to_obb_directory_summary">Required for installation of some large apps (mostly games) that use OBB expansion files</string>
 
+    <!-- Screen off UDFPS -->
+    <string name="screen_off_udfps_title">Screen off UDFPS</string>
+    <string name="screen_off_udfps_summary">Keep UDFPS enabled when the screen is off</string>
+
 </resources>
