FlamingoSettings: Update Russian translation (#12)

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -379,4 +379,27 @@
 
     <!-- Volume panel position -->
     <string name="volume_panel_position_title">Панель громкости слева</string>
+
+    <!-- Other sensors permission preference -->
+    <string name="auto_grant_OTHER_SENSORS_permission_title">Разрешить сенсорам доступ к приложениям по умолчанию</string>
+    <string name="auto_grant_OTHER_SENSORS_permission_summary_on">Сенсоры — это нестандартное разрешение, приложения могут работать со сбоями, если оно будет отклонено.</string>
+    <string name="auto_grant_OTHER_SENSORS_permission_summary_off">Запрос разрешения будет показан, когда приложение попытается получить доступ к датчикам. Обратите внимание, что некоторые приложения, возможно, потребуется перезапустить вручную после предоставления разрешения датчиков.</string>
+
+    <!-- LC3 codec -->
+    <string name="bluetooth_lc3_codec">LC3</string>
+
+    <!-- Storage scopes -->
+    <string name="storage_scopes">Области хранения</string>
+    <string name="allow_access_to_obb_directory_title">Разрешить доступ к папке Android/obb</string>
+    <string name="allow_access_to_obb_directory_summary">Требуется для установки некоторых больших приложений (в основном игр), которые используют файлы расширения OBB.</string>
+
+    <!-- Screen off UDFPS -->
+    <string name="screen_off_udfps_title">Отключить сенсор отпечатка пальца</string>
+    <string name="screen_off_udfps_summary">Сенсор отпечатка пальца активен, когда экран выключен</string>
+
+    <string name="cutout_force_fullscreen_title">Полноэкранный режим в приложениях</string>
+    <string name="cutout_force_fullscreen_summary">Переопределить вырез дисплея и включить полноэкранный режим для каждого приложения</string>
+
+    <string name="select_apps">Выберите приложения</string>
+
 </resources>
